fix: Update THE PLAN section text as requested

--- a/index.html
+++ b/index.html
@@ -517,9 +517,8 @@
                 72시간 <span class="gold-gradient">집중 트레이닝</span>
             </h2>
             <div class="mb-8">
-                <p class="text-red-500 font-bold text-lg mb-1">실전주의 프로젝트</p>
-                <p class="text-gray-300">최고등급 트레이너(<span class="text-white font-bold">프레딕 & 노바</span>) 2명과 함께하는 도제식 수업
-                </p>
+                <p class="text-red-500 font-bold text-lg mb-1">해탈코스는 실전주의 프로젝트입니다.</p>
+                <p class="text-gray-300">최상위 유혹자(<span class="text-white font-bold">프레딕&노바</span>)와 함께하는 수업입니다.</p>
             </div>
             <p class="text-gray-400 text-lg mb-4 max-w-2xl mx-auto">
                 이론만으로는 변하지 않습니다. 실전에서 부딪히고, 피드백 받고, 다시 도전합니다.
