fix: Replace broken icon with standard fa-users icon

--- a/index.html
+++ b/index.html
@@ -1184,7 +1184,7 @@
                     class="glass p-6 rounded-3xl text-center border border-white/5 hover:border-red-600/30 transition group">
                     <div
                         class="w-16 h-16 rounded-2xl gold-bg flex items-center justify-center text-black text-2xl mx-auto mb-4 group-hover:scale-110 transition-transform">
-                        <i class="fa-solid fa-users-rays"></i>
+                        <i class="fa-solid fa-users"></i>
                     </div>
                     <h4 class="font-bold text-white text-lg mb-2">평생 동료 커뮤니티</h4>
                     <p class="text-gray-400 text-sm">수강 완료 후에도 지속적인 성장을 위해 동료들과 데이터를 공유하고 함께 성장하는 공간.</p>
