fix: Hide Problem subtitle on mobile, show 3 cards instead of 2

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                     당신이 매번 실패하는<br class="md:hidden">
                     <span class="text-red-500">진짜 이유</span>
                 </h2>
-                <p class="text-gray-500 mt-4 text-lg">이런 문제가 반복되지 않으신가요?</p>
+                <p class="hidden md:block text-gray-500 mt-4 text-lg">이런 문제가 반복되지 않으신가요?</p>
             </div>
 
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 mb-16">
@@ -195,9 +195,9 @@
                     <p class="text-gray-500 text-sm leading-relaxed">5분마다 카톡을 확인하지만<br class="hidden md:inline">숫자 1은
                         지워지지 않습니다.</p>
                 </div>
-                <!-- External 2 (Hidden on mobile) -->
+                <!-- External 2 -->
                 <div
-                    class="hidden md:flex glass p-6 rounded-3xl text-center border border-white/5 hover:border-red-600/30 transition flex-col items-center min-h-[200px]">
+                    class="glass p-6 rounded-3xl text-center border border-white/5 hover:border-red-600/30 transition flex flex-col items-center min-h-[200px]">
                     <i class="fa-solid fa-hand text-3xl mb-4 text-red-500/70"></i>
                     <h4 class="text-base font-bold text-gray-200 mb-2">애프터 거절</h4>
                     <p class="text-gray-500 text-sm leading-relaxed">"나중에 봐요", "바빠서요"<br class="hidden md:inline">라는 말만
