--- a/index.html
+++ b/index.html
@@ -190,25 +190,27 @@
                 <!-- External 1 -->
                 <div
                     class="glass p-6 rounded-3xl text-center border border-white/5 hover:border-red-600/30 transition flex flex-col items-center min-h-[200px]">
-                    <i class="fa-solid fa-comment-slash text-3xl mb-4 text-red-500/70"></i>
-                    <h4 class="text-base font-bold text-gray-200 mb-2">읽씹 & 잠수</h4>
-                    <p class="text-gray-500 text-sm leading-relaxed">5분마다 카톡을 확인하지만<br class="hidden md:inline">숫자 1은
+                    <i class="fa-solid fa-comment-slash text-4xl mb-4 text-red-500/70"></i>
+                    <h4 class="text-lg font-bold text-gray-200 mb-2">읽씹 & 잠수</h4>
+                    <p class="text-gray-400 text-base leading-relaxed">5분마다 카톡을 확인하지만<br class="hidden md:inline">숫자 1은
                         지워지지 않습니다.</p>
                 </div>
                 <!-- External 2 -->
                 <div
                     class="glass p-6 rounded-3xl text-center border border-white/5 hover:border-red-600/30 transition flex flex-col items-center min-h-[200px]">
-                    <i class="fa-solid fa-hand text-3xl mb-4 text-red-500/70"></i>
-                    <h4 class="text-base font-bold text-gray-200 mb-2">애프터 거절</h4>
-                    <p class="text-gray-500 text-sm leading-relaxed">"나중에 봐요", "바빠서요"<br class="hidden md:inline">라는 말만
+                    <i class="fa-solid fa-hand text-4xl mb-4 text-red-500/70"></i>
+                    <h4 class="text-lg font-bold text-gray-200 mb-2">애프터 거절</h4>
+                    <p class="text-gray-400 text-base leading-relaxed">"나중에 봐요", "바빠서요"<br class="hidden md:inline">라는
+                        말만
                         돌아옵니다.</p>
                 </div>
                 <!-- External 3 -->
                 <div
                     class="glass p-6 rounded-3xl text-center border border-white/5 hover:border-red-600/30 transition flex flex-col items-center min-h-[200px]">
-                    <i class="fa-solid fa-user-slash text-3xl mb-4 text-red-500/70"></i>
-                    <h4 class="text-base font-bold text-gray-200 mb-2">"좋은 사람" 존</h4>
-                    <p class="text-gray-500 text-sm leading-relaxed">"오빠는 진짜 좋은 사람인데...<br class="hidden md:inline">남자로는
+                    <i class="fa-solid fa-user-slash text-4xl mb-4 text-red-500/70"></i>
+                    <h4 class="text-lg font-bold text-gray-200 mb-2">"좋은 사람" 존</h4>
+                    <p class="text-gray-400 text-base leading-relaxed">"오빠는 진짜 좋은 사람인데..."<br
+                            class="hidden md:inline">"남자로는
                         안 보여요"</p>
                 </div>
                 <!-- External 4 (Hidden on mobile) -->
@@ -230,45 +232,31 @@
                     </div>
 
                     <div class="relative z-10">
-                        <p class="text-gray-400 text-lg mb-6">
+                        <p class="text-gray-400 text-lg md:text-xl mb-6">
                             문제는 당신의 <span class="text-white font-medium">'진심'</span>이 아닙니다.
                         </p>
-                        <h3 class="text-3xl md:text-5xl font-black leading-tight mb-8">
-                            노력의 방향이<br class="md:hidden">
+                        <h3 class="text-4xl md:text-5xl font-black leading-tight mb-10">
+                            노력의 방향이<br>
                             <span class="text-red-500 underline decoration-4 underline-offset-8">틀렸기 때문입니다.</span>
                         </h3>
 
-                        <div class="max-w-2xl mx-auto space-y-4 text-left mb-10">
-                            <div class="flex items-start gap-4 p-4 bg-red-950/20 rounded-2xl border border-red-900/30">
-                                <i class="fa-solid fa-xmark text-red-500 mt-1"></i>
-                                <p class="text-gray-300">"여자한테 <span class="text-red-400 font-bold">잘 보이려고</span>" 하면<br
-                                        class="md:hidden">
-                                    그녀는 당신을 <span class="text-red-400">더 하찮게</span> 봅니다.</p>
-                            </div>
-                            <div class="flex items-start gap-4 p-4 bg-red-950/20 rounded-2xl border border-red-900/30">
-                                <i class="fa-solid fa-xmark text-red-500 mt-1"></i>
-                                <p class="text-gray-300">"<span class="text-red-400 font-bold">착하게</span>" 행동하면 할수록<br
-                                        class="md:hidden">
-                                    그녀의 본능은 당신을<br class="md:hidden">
-                                    <span class="text-red-400">'연애 대상 밖'</span>으로 분류합니다.
-                                </p>
-                            </div>
-                            <div
-                                class="flex items-start gap-4 p-4 bg-neutral-900/20 rounded-2xl border border-red-600/30">
-                                <i class="fa-solid fa-check text-red-500 mt-1"></i>
-                                <p class="text-gray-200">여자는 <span class="text-red-400 font-bold">'노력하는 남자'</span>가<br
-                                        class="md:hidden">
-                                    아닌, <span class="text-red-400 font-bold">'매력적인 남자'</span>를<br class="md:hidden">
-                                    선택합니다.</p>
-                            </div>
+                        <!-- Simplified Message -->
+                        <div class="max-w-xl mx-auto mb-10">
+                            <p class="text-2xl md:text-3xl text-gray-200 leading-relaxed mb-6">
+                                "여자한테 <span class="text-red-400 font-bold">잘 보이려고</span>"<br>
+                                "<span class="text-red-400 font-bold">착하게</span>" 행동할수록
+                            </p>
+                            <p class="text-3xl md:text-4xl text-red-500 font-black">
+                                그녀는 당신을<br>
+                                '연애 대상 밖'으로 분류합니다.
+                            </p>
                         </div>
 
                         <!-- Final Emphasis -->
                         <div class="pt-6 border-t border-white/10">
                             <p class="text-xl md:text-2xl text-gray-300 leading-relaxed">
-                                여자는 당신의 노력에는<br class="md:hidden">
-                                <span class="text-red-400 font-bold">관심 없습니다.</span><br><br class="hidden md:block">
-                                당신이 <span class="text-red-500 font-bold">매력적인 사람인지만<br class="md:hidden"> 생각합니다.</span>
+                                여자는 <span class="text-red-400 font-bold">노력하는 남자</span>가 아닌<br>
+                                <span class="text-white font-bold">매력적인 남자</span>를 선택합니다.
                             </p>
                         </div>
                     </div>
@@ -277,9 +265,6 @@
         </div>
     </section>
 
-    <!-- ========================================= -->
-    <!-- SECTION 3: FAILURE (SB7: The Stakes - What's at Risk) -->
-    <!-- ========================================= -->
     <!-- ========================================= -->
     <!-- SECTION 3: FAILURE (SB7: The Stakes - What's at Risk) -->
     <!-- ========================================= -->
