feat(Phase2): Add course identity + free consultation CTA

--- a/index.html
+++ b/index.html
@@ -154,16 +154,24 @@
                 여자는 노력하는 남자가 아닌
                 <span class="text-red-500 font-bold">매력적인 남자</span>를 선택합니다.
             </p>
-            <!-- Mobile: Single CTA only -->
+            <!-- Course Identity (What you'll learn) -->
+            <div class="mb-8 md:mb-10">
+                <p class="text-gray-400 text-base md:text-lg">
+                    <span class="text-white font-bold">72시간</span> 동안 배우는 것:
+                    <span class="text-red-400 font-medium">어프로치 → 대화 → 관계 설계</span>까지 전 과정
+                </p>
+            </div>
+
+            <!-- CTA Buttons -->
             <div class="flex flex-col sm:flex-row gap-4 justify-center">
                 <a href="#contact"
                     class="gold-bg text-black px-10 py-5 rounded-full font-bold text-xl hover:scale-105 transition-transform inline-block shadow-lg shadow-yellow-900/30">
                     <i class="fa-solid fa-bolt mr-2"></i>지금 바로 신청하기
                 </a>
-                <!-- Secondary CTA: Hidden on mobile -->
-                <a href="#problem"
-                    class="hidden md:inline-block border border-white/20 text-white px-10 py-5 rounded-full font-bold text-xl hover:bg-white/5 transition">
-                    왜 나는 실패할까?
+                <!-- Free Consultation CTA -->
+                <a href="#contact"
+                    class="border border-white/20 text-white px-8 py-5 rounded-full font-bold text-lg hover:bg-white/5 transition inline-block">
+                    <i class="fa-solid fa-comment-dots mr-2"></i>무료 익명 상담
                 </a>
             </div>
         </div>
