fix: Update Problem grid to flex layout for 5 cards & consistent sizing

--- a/index.html
+++ b/index.html
@@ -188,40 +188,14 @@
                 <p class="hidden md:block text-gray-500 mt-4 text-lg">이런 문제가 반복되지 않으신가요?</p>
             </div>
 
-            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 mb-16">
+            <div class="flex flex-wrap justify-center gap-6 mb-16 px-4">
                 <!-- External 1 -->
                 <div
-                    class="glass p-6 rounded-3xl text-center border border-white/5 hover:border-red-600/30 transition flex flex-col items-center min-h-[200px]">
+                    class="w-full sm:w-[calc(50%-12px)] lg:w-[calc(25%-18px)] glass p-6 rounded-3xl text-center border border-white/5 hover:border-red-600/30 transition flex flex-col items-center min-h-[200px]">
                     <i class="fa-solid fa-comment-slash text-4xl mb-4 text-red-500/70"></i>
                     <h4 class="text-lg font-bold text-gray-200 mb-2">읽씹 & 잠수</h4>
                     <p class="text-gray-400 text-base leading-relaxed">5분마다 카톡을 확인하지만<br class="hidden md:inline">숫자 1은
                         지워지지 않습니다.</p>
-                </div>
-                <!-- External 2 -->
-                <div
-                    class="glass p-6 rounded-3xl text-center border border-white/5 hover:border-red-600/30 transition flex flex-col items-center min-h-[200px]">
-                    <i class="fa-solid fa-hand text-4xl mb-4 text-red-500/70"></i>
-                    <h4 class="text-lg font-bold text-gray-200 mb-2">애프터 거절</h4>
-                    <p class="text-gray-400 text-base leading-relaxed">"나중에 봐요", "바빠서요"<br class="hidden md:inline">라는
-                        말만
-                        돌아옵니다.</p>
-                </div>
-                <!-- External 3 -->
-                <div
-                    class="glass p-6 rounded-3xl text-center border border-white/5 hover:border-red-600/30 transition flex flex-col items-center min-h-[200px]">
-                    <i class="fa-solid fa-user-slash text-4xl mb-4 text-red-500/70"></i>
-                    <h4 class="text-lg font-bold text-gray-200 mb-2">"좋은 사람" 존</h4>
-                    <p class="text-gray-400 text-base leading-relaxed">"오빠는 진짜 좋은 사람인데..."<br
-                            class="hidden md:inline">"남자로는
-                        안 보여요"</p>
-                </div>
-                <!-- External 4 (Hidden on mobile) -->
-                <div
-                    class="hidden md:flex glass p-6 rounded-3xl text-center border border-white/5 hover:border-red-600/30 transition flex-col items-center min-h-[200px]">
-                    <i class="fa-solid fa-hand-holding-heart text-3xl mb-4 text-red-500/70"></i>
-                    <h4 class="text-base font-bold text-gray-200 mb-2">스킨십 거절</h4>
-                    <p class="text-gray-500 text-sm leading-relaxed">어깨에 손을 올리는 순간<br class="hidden md:inline">"우리는 너무
-                        이른거 같아"</p>
                 </div>
             </div>
 
