fix: Update line breaks in Failure and Guide sections for readability

--- a/index.html
+++ b/index.html
@@ -257,29 +257,29 @@
                 <div
                     class="bg-red-950/20 p-6 rounded-3xl border border-red-900/30 flex flex-col items-center text-center min-h-[160px] md:min-h-[180px]">
                     <i class="fa-solid fa-receipt text-red-500 text-3xl mb-4"></i>
-                    <p class="text-gray-300 text-sm leading-relaxed">주말마다 클럽과 라운지를 가지만<br class="hidden md:inline"><span
-                            class="text-red-400 font-bold">손에 남는 건 영수증</span>뿐입니다.</p>
+                    <p class="text-gray-300 text-sm leading-relaxed">주말마다 클럽과 라운지를 가지만<br>
+                        손에 남는 건 <span class="text-red-400 font-bold">영수증</span>뿐입니다.</p>
                 </div>
                 <!-- Card 2 -->
                 <div
                     class="bg-red-950/20 p-6 rounded-3xl border border-red-900/30 flex flex-col items-center text-center min-h-[160px] md:min-h-[180px]">
                     <i class="fa-solid fa-user-group text-red-500 text-3xl mb-4"></i>
-                    <p class="text-gray-300 text-sm leading-relaxed">"나는 왜 <span class="text-red-400 font-bold">쟤밖에 못
-                            만나지?</span>"<br class="hidden md:inline">스스로 물으며 타협합니다.</p>
+                    <p class="text-gray-300 text-sm leading-relaxed">"나는 왜 쟤밖에 못 만나지?"<br>
+                        스스로 물으며 타협합니다.</p>
                 </div>
                 <!-- Card 3 -->
                 <div
                     class="bg-red-950/20 p-6 rounded-3xl border border-red-900/30 flex flex-col items-center text-center min-h-[160px] md:min-h-[180px]">
                     <i class="fa-solid fa-bed text-red-500 text-3xl mb-4"></i>
-                    <p class="text-gray-300 text-sm leading-relaxed">자기 전 SNS에서 <span class="text-red-400 font-bold">그녀의
-                            새 남친</span><br class="hidden md:inline">사진을 봅니다. 둘이 행복해 보입니다.</p>
+                    <p class="text-gray-300 text-sm leading-relaxed">자기 전 SNS에서 그녀의 새 남친<br>
+                        사진을 봅니다. 둘이 행복해 보입니다.</p>
                 </div>
                 <!-- Card 4 -->
                 <div
                     class="bg-red-950/20 p-6 rounded-3xl border border-red-900/30 flex flex-col items-center text-center min-h-[160px] md:min-h-[180px]">
                     <i class="fa-solid fa-clock-rotate-left text-red-500 text-3xl mb-4"></i>
-                    <p class="text-gray-300 text-sm leading-relaxed">유튜브 연애 영상만 보다가<br class="hidden md:inline"><span
-                            class="text-red-400 font-bold">또 1년</span>이 지나갑니다.</p>
+                    <p class="text-gray-300 text-sm leading-relaxed">유튜브 연애 영상만 보다가<br>
+                        또 1년이 지나갑니다.</p>
                 </div>
             </div>
 
@@ -324,8 +324,9 @@
                     사람들은 생각합니다.
                 </p>
                 <p class="text-2xl md:text-3xl text-gray-300 leading-relaxed">
-                    외모가 좋아야만, 타고나야만<br>
-                    이성에게 선택받는다고.
+                    "외모가 좋아야만..."<br>
+                    "타고나야만.."<br>
+                    이성에게 선택받는다고
                 </p>
             </div>
 
@@ -339,9 +340,9 @@
                 <p class="text-2xl md:text-3xl text-red-500 font-bold">
                     유혹은 메커니즘입니다.
                 </p>
-                <p class="text-lg md:text-xl text-gray-300">
-                    배우면 됩니다.<br class="md:hidden">
-                    연습하면 됩니다.<br class="md:hidden">
+                <p class="text-lg md:text-xl text-gray-300 leading-relaxed">
+                    배우면 됩니다.<br>
+                    연습하면 됩니다.<br>
                     적용하면 됩니다.
                 </p>
                 <p class="text-base text-gray-500">
