fix: Update Problem section headline to '이런 문제를 반복해서 겪지 않으시나요?'

--- a/index.html
+++ b/index.html
@@ -182,10 +182,8 @@
             <div class="text-center mb-12">
                 <span class="text-red-500 font-bold tracking-widest uppercase text-sm">THE REAL PROBLEM</span>
                 <h2 class="text-3xl md:text-5xl font-black mt-4 text-gray-100">
-                    당신이 매번 실패하는<br class="md:hidden">
-                    <span class="text-red-500">진짜 이유</span>
+                    <span class="text-red-500">이런 문제를 반복해서<br class="md:hidden"> 겪지 않으시나요?</span>
                 </h2>
-                <p class="hidden md:block text-gray-500 mt-4 text-lg">이런 문제가 반복되지 않으신가요?</p>
             </div>
 
             <div class="flex flex-wrap justify-center gap-6 mb-16 px-4">
