fix: Restore Problem cards, apply gold styling to headline, and redesign personal story section

--- a/index.html
+++ b/index.html
@@ -181,19 +181,47 @@
         <div class="max-w-6xl mx-auto">
             <div class="text-center mb-12">
                 <span class="text-red-500 font-bold tracking-widest uppercase text-sm">THE REAL PROBLEM</span>
-                <h2 class="text-3xl md:text-5xl font-black mt-4 text-gray-100">
-                    <span class="text-red-500">이런 문제를 반복해서<br class="md:hidden"> 겪지 않으시나요?</span>
+                <h2 class="text-3xl md:text-5xl font-black mt-4 text-gray-100 italic">
+                    <span class="gold-gradient">이런 문제를 반복해서<br class="md:hidden"> 겪지 않으시나요?</span>
                 </h2>
             </div>
 
             <div class="flex flex-wrap justify-center gap-6 mb-16 px-4">
-                <!-- External 1 -->
+                <!-- External 1: Ghosting -->
                 <div
-                    class="w-full sm:w-[calc(50%-12px)] lg:w-[calc(25%-18px)] glass p-6 rounded-3xl text-center border border-white/5 hover:border-red-600/30 transition flex flex-col items-center min-h-[200px]">
+                    class="w-full sm:w-[calc(50%-12px)] lg:w-[calc(20%-20px)] glass p-6 rounded-3xl text-center border border-white/5 hover:border-red-600/30 transition flex flex-col items-center min-h-[220px]">
                     <i class="fa-solid fa-comment-slash text-4xl mb-4 text-red-500/70"></i>
                     <h4 class="text-lg font-bold text-gray-200 mb-2">읽씹 & 잠수</h4>
-                    <p class="text-gray-400 text-base leading-relaxed">5분마다 카톡을 확인하지만<br class="hidden md:inline">숫자 1은
-                        지워지지 않습니다.</p>
+                    <p class="text-gray-400 text-base leading-relaxed">5분마다 카톡을 확인하지만<br>숫자 1은 지워지지 않습니다.</p>
+                </div>
+                <!-- External 2: Rejection -->
+                <div
+                    class="w-full sm:w-[calc(50%-12px)] lg:w-[calc(20%-20px)] glass p-6 rounded-3xl text-center border border-white/5 hover:border-red-600/30 transition flex flex-col items-center min-h-[220px]">
+                    <i class="fa-solid fa-hand text-4xl mb-4 text-red-500/70"></i>
+                    <h4 class="text-lg font-bold text-gray-200 mb-2">애프터 거절</h4>
+                    <p class="text-gray-400 text-base leading-relaxed">"나중에 봐요", "바빠서요"<br>라는 말만 돌아옵니다.</p>
+                </div>
+                <!-- External 3: Field Results -->
+                <div
+                    class="w-full sm:w-[calc(50%-12px)] lg:w-[calc(20%-20px)] glass p-6 rounded-3xl text-center border border-white/5 hover:border-red-600/30 transition flex flex-col items-center min-h-[220px]">
+                    <i class="fa-solid fa-person-walking-arrow-loop-left text-4xl mb-4 text-red-500/70"></i>
+                    <h4 class="text-lg font-bold text-gray-200 mb-2">필드 수확 없음</h4>
+                    <p class="text-gray-400 text-base leading-relaxed">매주 나가서 노력하지만<br>손에 남는 건 <span
+                            class="text-red-500 font-bold">영수증</span>뿐입니다.</p>
+                </div>
+                <!-- External 4: Friendzone -->
+                <div
+                    class="w-full sm:w-[calc(50%-12px)] lg:w-[calc(20%-20px)] glass p-6 rounded-3xl text-center border border-white/5 hover:border-red-600/30 transition flex flex-col items-center min-h-[220px]">
+                    <i class="fa-solid fa-user-slash text-4xl mb-4 text-red-500/70"></i>
+                    <h4 class="text-lg font-bold text-gray-200 mb-2">"좋은 사람" 존</h4>
+                    <p class="text-gray-400 text-base leading-relaxed">"오빠는 좋은 사람인데..."<br>"남자로는 안 보여요"</p>
+                </div>
+                <!-- External 5: Skinship -->
+                <div
+                    class="w-full sm:w-[calc(50%-12px)] lg:w-[calc(20%-20px)] glass p-6 rounded-3xl text-center border border-white/5 hover:border-red-600/30 transition flex flex-col items-center min-h-[220px]">
+                    <i class="fa-solid fa-hand-holding-heart text-4xl mb-4 text-red-500/70"></i>
+                    <h4 class="text-lg font-bold text-gray-200 mb-2">스킨십 거절</h4>
+                    <p class="text-gray-400 text-base leading-relaxed">어깨에 손을 올리는 순간<br>"우리는 너무 이른거 같아"</p>
                 </div>
             </div>
 
@@ -348,14 +376,21 @@
                 </p>
             </div>
 
-            <!-- Personal Story (Hidden on mobile) -->
-            <div
-                class="hidden md:block bg-gray-800/60 rounded-2xl p-6 mb-16 max-w-xl mx-auto border border-gray-700/50">
-                <p class="text-sm md:text-base text-gray-400 leading-relaxed text-left">
-                    저희 또한 유혹의 원리를 깨닫기 전까지는 타고난 사람만 할 수 있다고 믿었습니다.
-                    그런 저희가 매력적이고 이성에게 선택받는 사람이 되기까지의 모든 여정,
-                    그리고 <span class="text-red-400 font-medium">수천 건의 상담을 통해 검증된 데이터</span>를 모두 이 강의에 담았습니다.
-                </p>
+            <!-- Personal Story -->
+            <div class="relative mb-16 max-w-2xl mx-auto px-4">
+                <div
+                    class="bg-gradient-to-br from-gray-900/80 to-black/80 rounded-3xl p-8 md:p-10 border border-white/10 shadow-2xl relative overflow-hidden group hover:border-red-500/20 transition-all duration-500">
+                    <!-- Subtle Glow -->
+                    <div class="absolute -top-20 -left-20 w-40 h-40 bg-red-500/5 rounded-full blur-[80px]"></div>
+
+                    <i class="fa-solid fa-quote-left text-red-500/20 text-5xl absolute top-6 left-6"></i>
+                    <p
+                        class="text-base md:text-lg text-gray-300 leading-relaxed text-left relative z-10 font-light italic">
+                        "저희 또한 유혹의 원리를 깨닫기 전까지는 타고난 사람만 할 수 있다고 믿었습니다. <br class="hidden md:block">
+                        그런 저희가 매력적이고 이성에게 선택받는 사람이 되기까지의 모든 여정, <br class="hidden md:block">
+                        그리고 <span class="text-red-400 font-bold">수천 건의 상담을 통해 검증된 데이터</span>를 모두 이 강의에 담았습니다."
+                    </p>
+                </div>
             </div>
 
             <!-- Imagination -->
