--- a/index.html
+++ b/index.html
@@ -204,10 +204,10 @@
                 <!-- External 3: Field Results -->
                 <div
                     class="w-full sm:w-[calc(50%-12px)] lg:w-[calc(20%-20px)] glass p-6 rounded-3xl text-center border border-white/5 hover:border-red-600/30 transition flex flex-col items-center min-h-[220px]">
-                    <i class="fa-solid fa-person-walking-arrow-loop-left text-4xl mb-4 text-red-500/70"></i>
+                    <i class="fa-solid fa-person-walking text-4xl mb-4 text-red-500/70"></i>
                     <h4 class="text-lg font-bold text-gray-200 mb-2">필드 수확 없음</h4>
-                    <p class="text-gray-400 text-base leading-relaxed">매주 나가서 노력하지만<br>손에 남는 건 <span
-                            class="text-red-500 font-bold">영수증</span>뿐입니다.</p>
+                    <p class="text-gray-400 text-base leading-relaxed">매주 나가서 노력하지만<br>
+                        손에 남는 건 <span class="text-red-500 font-bold">영수증</span>뿐입니다.</p>
                 </div>
                 <!-- External 4: Friendzone -->
                 <div
